test/ui/parsing/unbracketed-let-binding-pattern.lushui
main = case result of
    some let result => adjust result
    none => exception
